# metalstack

./: .gitignore  README.md  pyproject.toml
data/: collection.example.json
metalstack/: __init__.py  api.py  charts.py  cli.py  display.py  models.py  portfolio.py  tui.py
