[project]
name = "metalstack"
version = "0.1.0"
description = "CLI app for tracking precious metals portfolio with real-time spot prices"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "asciichartpy>=1.5.0",
    "readchar>=4.0.0",
]

[project.scripts]
metalstack = "metalstack.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["metalstack"]
